# data-quality

./: .gitignore  CLAUDE.md  pyproject.toml
lib/: README.md  pyproject.toml
lib/data_qa_lib/: __init__.py  client.py  metrics.py
lib/tests/: __init__.py  test_metrics.py
lib/tools/: build.sh  push.sh
