[project]
name = "data-qa-lib"
version = "0.0.1"
description = "A library to evaluate data quality on Databricks"
authors = [
    {name = "Nicolas Surleraux",email = "nsurleraux@gmail.com"}
]
license = {text = "AGPL"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyspark>=3.5.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
